Node Editors "Select Box" ignores the select modes Extend and Subtract from Active Tool settings #86867

Closed
opened 2021-03-24 01:06:55 +01:00 by Helge Grimhardt · 9 comments

System Information
Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: Not sure, I just checked 2.83 LTS which shows the same behavior as 2.92.0

Short description of error
In Node Editors the "Select Box" tool ignores the select modes "extend" and "subtract" from the Active Tool settings (N panel). Instead, the current selection is removed on mousedown, which is the expected behavior of the first mode "Set a new selection". However, it works just fine for the Lasso and Circle select tools.

Exact steps for others to reproduce the error

  • Add two nodes
  • Use the Select Box tool to box select one of them
  • Set the select mode to "Extend existing selection"
  • Box select the second node

This will automatically deselect the first one.

Thanks for looking into this. :-)box_select_modes.png

EDIT:
Added a test file.
node_editor_box_selection.blend

**System Information** Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: Not sure, I just checked 2.83 LTS which shows the same behavior as 2.92.0 **Short description of error** In Node Editors the "Select Box" tool ignores the select modes "extend" and "subtract" from the Active Tool settings (N panel). Instead, the current selection is removed on mousedown, which is the expected behavior of the first mode "Set a new selection". However, it works just fine for the Lasso and Circle select tools. **Exact steps for others to reproduce the error** - Add two nodes - Use the Select Box tool to box select one of them - Set the select mode to "Extend existing selection" - Box select the second node This will automatically deselect the first one. Thanks for looking into this. :-)![box_select_modes.png](https://archive.blender.org/developer/F9906254/box_select_modes.png) EDIT: Added a test file. [node_editor_box_selection.blend](https://archive.blender.org/developer/F9906824/node_editor_box_selection.blend)

Added subscriber: @Helge-4

Added subscriber: @Helge-4
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this issue on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-24 08:34, hash: 865025c343.

I can confirm this issue on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-24 08:34, hash: `865025c343`.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-03-24 10:36:38 +01:00
Member

Will check on this.

Will check on this.

This issue was referenced by 926f7612fd

This issue was referenced by 926f7612fd75078f5fb802d165f9c25af0bdb0df

Now that was scarily fast!

Now that was scarily fast!
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86867
No description provided.